@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "rxvt 7"
-.TH rxvt 7 "2005-02-18" "5.2" "RXVT-UNICODE"
+.TH rxvt 7 "2005-02-20" "5.2" "RXVT-UNICODE"
 .SH "NAME"
 RXVT REFERENCE \- FAQ, command sequences and other background information
 .SH "SYNOPSIS"
@@ -2346,10 +2346,10 @@ in combination with other switches) is:
 .Sp
 .Vb 12
 \&  MWM-hints
+\&  EWMH-hints (pid, utf8 names) and protocols (ping)
 \&  seperate underline colour
 \&  settable border widths and borderless switch
 \&  settable extra linespacing
-\&  extra window properties (e.g. UTF-8 window names and PID)
 \&  iso-14755-2 and -3, and visual feedback
 \&  backindex and forwardindex escape sequence
 \&  window op and locale change escape sequences
