@@ -1824,10 +1824,10 @@ CONFIGURE OPTIONS
         (possibly in combination with other switches) is:
 
           MWM-hints
+          EWMH-hints (pid, utf8 names) and protocols (ping)
           seperate underline colour
           settable border widths and borderless switch
           settable extra linespacing
-          extra window properties (e.g. UTF-8 window names and PID)
           iso-14755-2 and -3, and visual feedback
           backindex and forwardindex escape sequence
           window op and locale change escape sequences
