@@ -14,6 +14,7 @@ WISH: just for fun, do shade and tint with XRender.
 
 	- use XmbSetWMProperties instead of XSetWMProperties.
 	- properly update WM_LOCALE.
+        - implement _NET_WM_PING protocol.
 
 5.2  Sun Feb 20 01:48:59 CET 2005
 	- new option -pty-fd that makes the terminal a slave
